<resources>
    <string name="app_name">EAD_App</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome !!!</string>
    <string name="email">Email</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="nic_number">NIC Number</string>
    <string name="phone_number">Mobile Number</string>


    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
</resources>