<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".Login">

    <ImageView
        android:id="@+id/train"
        android:layout_width="477dp"
        android:layout_height="284dp"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />


    <TextView
        android:id="@+id/logintext"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:text="Welcome Back"
        android:textColor="#FFC107"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/train" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="203dp"
        android:text="Sign to your account"
        android:textColor="#FFC107"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintext" />

    <TextView
        android:id="@+id/nictext"
        android:layout_width="247dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="124dp"
        android:text="NIC"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/loginbuttonbackground"
        android:ems="10"
        android:hint="@string/nic_number"        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nictext" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="346dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="27dp"
        android:text="Password"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nic" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/loginbuttonbackground"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <Button
        android:id="@+id/btnsignIn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="31dp"
        android:backgroundTint="#FFC107"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:text="@string/sign_in"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/don_t_have_an_account"/>

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/sign_up"/>
    </LinearLayout>

</LinearLayout>